--- a/README.html
+++ b/README.html
@@ -121,8 +121,7 @@ $(document).ready(function () {
 
 <div id="unassisted-quantitative-evaluation-of-despeckling-filters" class="section level1">
 <h1>UNASSISTED QUANTITATIVE EVALUATION OF DESPECKLING FILTERS</h1>
-<p>PLEASE READ THE UNASSISTED QUANTITATIVE EVALUATION OF DESPECKLING FILTERS pdf and html file for instructions</p>
-<p>is <span class="math inline">\(\widehat X\)</span>, an estimator of the backscatter <span class="math inline">\(X\)</span>, based solely on the observed data <span class="math inline">\(Z\)</span>.</p>
+<p>PLEASE READ THE UNASSISTED QUANTITATIVE EVALUATION OF DESPECKLING FILTERS pdf or html file for instructions</p>
 </div>
 
 
